Bug 127941 - iOS: crash in impress when opening spellcheck dialog
Summary: iOS: crash in impress when opening spellcheck dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: iOS Editor (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other other
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-03 08:42 UTC by Nicolas Christener
Modified: 2019-10-07 08:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Video demonstrating the issue (4.01 MB, video/mp4)
2019-10-03 09:03 UTC, Nicolas Christener
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Christener 2019-10-03 08:42:50 UTC
Description:
In 4.1.63 (iOS) we can reproduce a crash when running the spellchecker in impress.

The crash happens when an impress "text box" containing a string with a spelling error is selected while opening the spellcheck dialog.  

Steps to Reproduce:
1. Open a presentation on iOS
2. Enter a string that does not exist in the "English (USA)" vocabulary, e.g. "Airbort"
3. While the text box is still selected set the language to "English (USA)" through the menu "Extras > Language > English (USA)"
4. While the text box is still selected open the spellcheck dialog through the menu "Extras > Language > Spelling..."

Actual Results:
The app crashes.

Expected Results:
The spell check dialog should show up.


Reproducible: Always


User Profile Reset: No



Additional Info:
As far as I can tell the "text box" that contains actually needs to containt a spelling error (this implies that a language is selected) and needs to have the focus in order to trigger the crash.
Comment 1 Nicolas Christener 2019-10-03 09:03:22 UTC
Created attachment 154722 [details]
Video demonstrating the issue
Comment 2 Xisco Faulí 2019-10-03 12:12:41 UTC
Moving to NEW as agreed in the ESC meeting
Comment 3 How can I remove my account? 2019-10-04 08:40:55 UTC
After recompiling the core code without assertions active on Kendy's advice, the crash (assertion failure) seems to be gone. Kendy's https://gerrit.libreoffice.org/#/c/80169/ will remove the assertion.
Comment 4 Commit Notification 2019-10-04 08:46:20 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1dbaff61609d7643311b968bef69be4276b109e7

tdf#127941: Don't be _that_ eager to assert(!IsTextEdit());

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Nicolas Christener 2019-10-06 08:26:14 UTC
Fixed. Tested in 4.1.64.

The issue can be closed.

Thanks a lot to the Collabora team for fixing this!