tdf#127941: Don't be _that_ eager to assert(!IsTextEdit());

Turns out that this is still a condition that can happen regularly:

* open Impress
* click an object with a spelling mistake
* press F7 to activate the spelling dialog (don't choose it from the
  menu)
=> assert()

It is unclear how to sort this out correctly without refactoring, and
also unclear how many other cases fail this condition, so let's change
to SAL_WARN_IF for the moment.

Change-Id: I97730cc93c86c279973702bbf4ddc922f1616c0b
Reviewed-on: https://gerrit.libreoffice.org/80171
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>